# odin

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.ai/: AGENT.md
.ai/backends/: AGENT.md  SKILL.md
docs/: agent-backends.md  iterm2-setup-guide.md  multi-platform-agents-proposal.md
examples/: target-agents-md-snippet.md  target-claude-md-snippet.md
examples/queue/multi-platform/: README.md
examples/queue/multi-platform/backlog/: 006-cursor-backend-core.md  007-cursor-stream-display.md  008-cursor-cli-and-tests.md  009-metrics-platform-fields.md  010-contract-platform-neutral.md  011-cli-warnings-and-lint.md  012-guide-and-docs.md
examples/queue/multi-platform/pending/: 001-backend-skeleton.md  002-config-loader.md  003-odin-config-command.md  004-runner-refactor.md  005-platform-and-model-flags.md
examples/queue/pending/: 001-add-readme.md  002-add-license.md
scripts/: install-tool.sh  regen_demo_files.py
src/odin/: __init__.py  __main__.py  _demo_files.py  cli.py  completed.py  config.py  contract.py  demo.py  git.py  guide.py  lint.py  metrics.py  prompts.py  protocol.py  queue.py  runner.py  style.py  term.py
src/odin/backends/: __init__.py  base.py  claude.py  cursor.py  grok.py  registry.py
tests/: conftest.py  test_backends.py  test_cli.py  test_completed.py  test_config.py  test_contract.py  test_demo.py  test_exec.py  test_git.py  test_guide.py  test_lint.py  test_metrics.py  test_prompts.py  test_protocol.py  test_queue.py  test_runner.py  test_signals.py  test_style.py  test_styling.py  test_term.py
